# xview3-kohei-solution

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  models_hrnet.py  pyproject.toml  run_inference.sh  train.sh
configs/localization/: v13_iim_ppv2_augv2.yml
configs/vessel_class/: v77_r50d_ppv6_v13loc_crop128_augv7.yml
configs/vessel_length/: v16_reg_ppv2_sz128.yml
scripts/: preproc.py
v13/: v13.py
v16/: v16_reg_ppv2_sz128.yml
xd/utils/: configs.py  meters.py  timer.py
xd/xview3/: preproc.py
xd/xview3/localization/: augmentation.py  metrics.py  models.py  trainer.py
xd/xview3/localization/dataset/: __init__.py  ppv2.py
xd/xview3/vessel_class/: augmentation.py  models.py  trainer.py
xd/xview3/vessel_class/dataset/: __init__.py  ppv6.py
xd/xview3/vessel_length/: augmentation.py  trainer.py
xd/xview3/vessel_length/dataset/: __init__.py
